<resources>
    <string name="app_name">TheGreenMagpie</string>
    <string name="title_activity_balance_management">BalanceManagement</string>
    <string name="title_activity_buyer_connection">BuyerConnection</string>
    <string name="title_activity_seller_connection">SellerConnection</string>
    <string name="paypal_email">Paypal email address</string>
    <string name="seller_pwd">Seller password</string>
    <string name="seller_button">Seller</string>
    <string name="seller_homepage_transaction_button">Make a transaction</string>
    <string name="seller_homepage_history_button">History</string>
    <string name="seller_transaction_initiation_amount">Type the amount</string>
    <string name="seller_transaction_initiation_nfc">Your NFC is activated</string>
    <string name="seller_waiting_transaction_text">Awaiting for NFC connection</string>
    <string name="seller_writing_transaction_text">Sending NFC message..</string>
    <string name="seller_transaction_done_text">NFC message sent</string>
    <string name="buyer_button">Client</string>
    <string name="buyer_auto_connect">Autoconnect with this email next time</string>
    <string name="buyer_manage_balance_button">Manage balance</string>
    <string name="buyer_homepage_nfc_message">Switch on NFC and get your phone near the seller\'s phone to pay.</string>
    <string name="buyer_nfc_transaction_detection">A payment request has been detected!</string>
    <string name="buyer_transaction_acceptation">Accept</string>
    <string name="buyer_transaction_refusal">Refuse</string>
    <string name="buyer_balance_amount">Amount:</string>
    <string name="history_right_title">Payments History</string>
    <string name="explanation">NFC is enabled on the device</string>
    <string name="nfc_enabled">Your NFC is activated</string>
    <string name="nfc_disabled">Your NFC is deactivated</string>
    <string name="nfc_unpresent">Your device is not NFC enabled</string>
    <string name="nfcReadOnlyErrorTitle">Read Only Error</string>
    <string name="nfcReadOnlyError">The NFC tag is not writable</string>
    <string name="go_button">GO!</string>
    <string name="magpie_logo_description">The magpie logo of this application</string>
    <string name="logout_text">Logout</string>
    <string name="settings_text">Settings</string>
    <string name="return_text">Return</string>
    <string name="cancel_text">Cancel</string>
    <string name="transaction_details_title">Transaction Details</string>
</resources>
