<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ig2i.thegreenmagpie.seller.SellerConnectionActivity"
    android:background="@color/whole_interface_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:contentDescription="@string/magpie_logo_description"
            android:id="@+id/magpie_view"
            android:src="@drawable/magpie_layer"
            android:layout_gravity="center_horizontal|top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seller_pwd"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="@dimen/normal_sized_text"
                    android:textColor="@color/dark_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/editText2"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:maxLength="150"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_bg"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:layout_gravity="end"
                    android:gravity="end">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:orientation="horizontal">


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:layout_width="@dimen/go_button_width"
                    android:layout_height="match_parent"
                    android:text="@string/go_button"
                    android:id="@+id/button6"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/normal_sized_text"
                    android:background="@drawable/edit_text_bg" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="@dimen/go_button_width"
                android:layout_height="match_parent"
                android:text="@string/buyer_button"
                android:id="@+id/button7"
                android:layout_gravity="end"
                android:background="@drawable/edit_text_bg"
                android:textSize="@dimen/normal_sized_text" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
