<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ig2i.thegreenmagpie.buyer.TransactionDetectionActivity"
    android:background="@color/whole_interface_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:text="@string/buyer_nfc_transaction_detection"
                android:textSize="@dimen/super_sized_text"
                android:textColor="@color/dark_green"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_balance_amount"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/normal_sized_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0.80"
                android:id="@+id/textView11"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/darkest_green"
                android:textStyle="bold"
                android:textSize="@dimen/huge_sized_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/buyer_transaction_acceptation"
                android:id="@+id/button9"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/agreement_bg"
                android:textSize="@dimen/normal_sized_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/buyer_transaction_refusal"
                android:id="@+id/button10"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/refusal_bg"
                android:textSize="@dimen/normal_sized_text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
