<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_small_top_margin"
    tools:context="com.ig2i.thegreenmagpie.seller.SellerHomepageActivity"
    android:background="@color/whole_interface_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:foreground="@android:color/transparent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:foreground="@android:color/transparent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:foreground="@android:color/transparent"
                android:background="@android:color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/returnView"
                    android:src="@drawable/return_icon_bg"
                    android:nestedScrollingEnabled="false"
                    android:adjustViewBounds="false"
                    android:clickable="false"
                    android:background="@android:color/transparent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:foreground="@android:color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_text"
                    android:id="@+id/textView7"
                    android:textColor="@color/light_green"
                    android:textSize="@dimen/normal_sized_text"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:gravity="center_vertical|end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_text"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/light_green"
                    android:textSize="@dimen/normal_sized_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/settings_icon_bg"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:contentDescription="@string/magpie_logo_description"
            android:id="@+id/magpie_view"
            android:src="@drawable/magpie_layer"
            android:layout_gravity="center_horizontal|top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/seller_homepage_transaction_button"
                    android:id="@+id/button11"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="@dimen/normal_sized_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:baselineAligned="false">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/seller_homepage_history_button"
                    android:id="@+id/button12"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edit_text_bg"
                    android:textSize="@dimen/normal_sized_text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
