<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_small_top_margin"
    tools:context=".buyer.BuyerHomepageActivity"
    android:background="@color/whole_interface_background">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:foreground="@android:color/transparent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:foreground="@android:color/transparent"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:foreground="@android:color/transparent"
            android:background="@android:color/transparent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnView"
                android:src="@drawable/return_icon_bg"
                android:nestedScrollingEnabled="false"
                android:adjustViewBounds="false"
                android:clickable="false"
                android:background="@android:color/transparent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:foreground="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_text"
                android:id="@+id/textView7"
                android:textColor="@color/light_green"
                android:textSize="@dimen/normal_sized_text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_gravity="right"
                android:textColor="@color/light_green"
                android:textSize="@dimen/normal_sized_text"
                android:text="$51.8" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:contentDescription="@string/magpie_logo_description"
        android:id="@+id/magpie_view"
        android:src="@drawable/magpie_layer"
        android:layout_gravity="center_horizontal|top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_homepage_nfc_message"
                android:id="@+id/textView6"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/normal_sized_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:textAlignment="center"
                android:layout_gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:gravity="end">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/buyer_manage_balance_button"
                android:id="@+id/button8"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="@drawable/edit_text_bg"
                android:textSize="@dimen/normal_sized_text"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>
</RelativeLayout>
